--- a/src/css/main.css
+++ b/src/css/main.css
@@ -107,7 +107,7 @@ li:hover {
 
 .pin {
     padding-left: 20px;
-    background-image: url('../images/rsz_1rsz_pin.png');
+    background-image: url('../images/rsz_pin.png');
     background-repeat: no-repeat;
     background-position: 5px;
 }
